# zayn2

./: ._build.sh  CMakeLists.txt  README.md  build.sh  compile.bat  compile_windows.sh
data/levelFiles/: level0.txt  level0_.txt  models0.txt
data/levelFiles/blender/: Cube.001.mtl  cube_c.001.mtl  cube_c.002.mtl  cube_c.mtl  scene_data.json
include/: ._stb_image.h
include/glm/: ._CMakeLists.txt
include/imgui/: ._imgui.cpp  ._imgui.h  ._imgui_demo.cpp  ._imgui_draw.cpp  ._imgui_internal.h  ._imgui_widgets.cpp  ._imstb_rectpack.h  ._imstb_textedit.h  ._imstb_truetype.h
include/nlohmann/: ._json.hpp
lib/: ._libvulkan.1.3.283.dylib  ._libvulkan.1.dylib
src/: camera.cpp  camera.h  camera_manager.cpp  commonlib.h  compile.sh  config.h  dynamic_array.h  entity.cpp  entity.h  hash.cpp  input.cpp  input.h  load_level.cpp  main.cpp  memory.cpp  memory.h  model.cpp  model.h  my_imgui.cpp  todo.c  zayn.cpp  zayn.h
src/casette/: casette_system.cpp  casette_system.h  intro_casette.cpp  lighting_casette.cpp  lighting_casette_01.cpp  lighting_casette_02.cpp  lighting_casette_03.cpp  lighting_casette_03_with_textures.cpp
src/managers/: component_manager.cpp  component_manager.h  coordinator.cpp  coordinator.h  entity_manager.cpp  entity_manager.h  event_manager.cpp  event_manager.h  system_manager.cpp  system_manager.h
src/math/: geometry.h  math.h  matrix.h  rand.h  vector.h
src/renderer/: ._render_vulkan.cpp  render.cpp  render.h  render_vulkan.cpp
src/renderer/shaders/: ._frag_blank.spv  ._grid_vert.spv  ._text_frag.spv  ._vkShader_3d_INIT_frag.spv  frag_blank.spv  frag_blank_color.frag  frag_blank_color.spv  frag_blank_light.frag  frag_blank_light.spv  frag_blank_object_for_light_02.frag  frag_blank_object_for_light_02.spv  grid_frag.frag  (+26 more)
zayn2/: README.md
